Modifying the theme a little bit

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-cayman
+title: Welcome To Inkblot Labs
+description: Inkblot Labs - Making the world a better place, one experiment at a time
+lang: "en-IN"
